See http://netpbm.sourceforge.net/history.html for a general history of
Netpbm.

CHANGE HISTORY 
--------------

not yet  BJH  Release 10.40.00

              pnmtopalm: fix typo in error message.

              pnmtops: fix crash when program attempts to write 12 bits per
              sample Postscript.  It doesn't really know how to do that, so
              now it just writes 8 unless you do -psfilter.

              pamfunc: Add -andmask, -ormask, -xormask, -not,
              -shiftleft, -shiftright.

              anytopnm, pnmmargin, pamstretch-gen, ppmquantall: fix
              small temporary file security exposure.

              pnmmargin: add -plain option.    Thanks
              Prophet of the Way <afu@wta.att.ne.jp>.

              pnmmargin: recognize invalid options better.    Thanks
              Prophet of the Way <afu@wta.att.ne.jp>.

              pnmtopng: Sort palette properly when alpha maxval != 255.

              pnmtopng: Fix array bound violation with = 256 colors and -alpha.

              pnmtopng: Fix array bound violation with > 256 alpha mask levels.

              pnmgamma: improve error messages.

              pamtopfm: Fix wrong selection of default endianness.

              libnetpbm: Add pm_system_lp(), pm_system_vp().

              libnetpbm: Fix uninitialized variable in pnm_allocpamrown().

              Rename pamtooctave to pamtooctaveimg.

              Build: don't build pstopnm on system without unix process
              management.

              Build: put -l's after .o's in test links.

              Build: don't use 'uint' type.  Solaris 10 apparently doesn't
              have it.

              Build: Add missing <stdlib.h> to ppmrough.c.

07.06.26 BJH  Release 10.39.00

              Add pamtooctave.  Thanks Scott Pakin (scott@pakin.org).

              Add pamundice.

              fitstopnm: add -omaxval.

              pnmremap: add -norand.

              pbmtext: improve error messages about fonts.
