@@ -6,7 +6,11 @@ CHANGE HISTORY
 
 not yet  BJH  Release 10.40.00
 
-              pnmtopalm: fix typo in error message.
+              pbmtonokia: fail if input is > 255 x 255.  Thanks Paul Bolle
+              <pebolle@tiscali.nl>.
+
+              pnmtopalm: fix typo in error message.  Thanks Paul Bolle
+              <pebolle@tiscali.nl>.
 
               pnmtops: fix crash when program attempts to write 12 bits per
               sample Postscript.  It doesn't really know how to do that, so
